--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "drizzle-zod": "^0.5.1",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-safe-action": "^7.10.2",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
